--- a/driving-day-app-backend/requirements.txt
+++ b/driving-day-app-backend/requirements.txt
@@ -1,10 +1,11 @@
 asgiref==3.8.1
+autopep8==2.3.1
 CacheControl==0.14.0
 cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
-cryptography==43.0.1
+cryptography==43.0.3
 Django==5.1.2
 django-cors-headers==4.5.0
 djangorestframework==3.15.2
@@ -28,6 +29,7 @@ proto-plus==1.24.0
 protobuf==5.28.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycodestyle==2.12.1
 pycparser==2.22
 PyJWT==2.9.0
 pyparsing==3.2.0
@@ -37,7 +39,3 @@ rsa==4.9
 sqlparse==0.5.1
 uritemplate==4.1.1
 urllib3==2.2.3
-
-numpy
-pandas
-matplotlib
