--- a/driving-day-app-backend/Makefile
+++ b/driving-day-app-backend/Makefile
@@ -1,8 +1,8 @@
 .PHONY:
 
 setvenv:
-	python3 -m venv .venv && \
-	source .venv/bin/activate && \
+	python3 -m venv venv && \
+	source venv/bin/activate && \
 	pip install -r requirements.txt
 
 runserver: setvenv
