--- a/driving-day-app-backend/requirements.txt
+++ b/driving-day-app-backend/requirements.txt
@@ -24,6 +24,8 @@ grpcio-status==1.68.0
 httplib2==0.22.0
 idna==3.10
 msgpack==1.1.0
+numpy==2.1.3
+pandas==2.2.3
 proto-plus==1.25.0
 protobuf==5.28.3
 pyasn1==0.6.1
