--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install curl
+        run: sudo apt-get update && sudo apt-get install -y curl
+
       - name: Deploy to PythonAnywhere
         env:
           PA_USERNAME: ${{ secrets.PA_USERNAME }}
@@ -21,27 +24,18 @@ jobs:
           PA_VIRTUAL_ENV: ${{ secrets.PA_VIRTUAL_ENV }}
           PA_PROJECT_DIR: ${{ secrets.PA_PROJECT_DIR }}
         run: |
-          # Install HTTPie for API requests
-          sudo apt-get install httpie
-
-          # Pull the latest code on PythonAnywhere
-          http --form POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
-            "Authorization: Token $PA_API_TOKEN" \
-            executable=python3 \
-            command="cd $PA_PROJECT_DIR && git pull"
-
-          # Install dependencies
-          http --form POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
-            "Authorization: Token $PA_API_TOKEN" \
-            executable=python3 \
-            command="source $PA_VIRTUAL_ENV/bin/activate && pip install -r $PA_PROJECT_DIR/requirements.txt"
+          # Pull latest code and install dependencies
+          curl -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
+            -H "Authorization: Token $PA_API_TOKEN" \
+            --form executable=python3 \
+            --form command="cd $PA_PROJECT_DIR && git pull && source $PA_VIRTUAL_ENV/bin/activate && pip install -r requirements.txt"
 
           # Run migrations
-          http --form POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
-            "Authorization: Token $PA_API_TOKEN" \
-            executable=python3 \
-            command="source $PA_VIRTUAL_ENV/bin/activate && python $PA_PROJECT_DIR/manage.py migrate"
+          curl -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
+            -H "Authorization: Token $PA_API_TOKEN" \
+            --form executable=python3 \
+            --form command="source $PA_VIRTUAL_ENV/bin/activate && python $PA_PROJECT_DIR/manage.py migrate"
 
           # Reload the web app
-          http --form POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/$PA_DOMAIN_NAME/reload/" \
-            "Authorization: Token $PA_API_TOKEN"
+          curl -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/$PA_DOMAIN_NAME/reload/" \
+            -H "Authorization: Token $PA_API_TOKEN"
