--- a/driving-day-app-frontend/package.json
+++ b/driving-day-app-frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "dotenv": "^16.4.5",
+    "filepond": "^4.32.5",
     "firebase": "^11.0.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
