--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,12 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y curl
 
       - name: Verify Secrets
+        env:
+          PA_USERNAME: ${{ secrets.PA_USERNAME }}
+          PA_API_TOKEN: ${{ secrets.PA_API_TOKEN }}
+          PA_DOMAIN_NAME: ${{ secrets.PA_DOMAIN_NAME }}
+          PA_VIRTUAL_ENV: ${{ secrets.PA_VIRTUAL_ENV }}
+          PA_PROJECT_DIR: ${{ secrets.PA_PROJECT_DIR }}
         run: |
           echo "Checking if secrets are set:"
           [ -z "$PA_USERNAME" ] && echo "PA_USERNAME is not set" || echo "PA_USERNAME is set"
