Echoing api token

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,9 @@ jobs:
           PA_PROJECT_DIR: ${{ secrets.PA_PROJECT_DIR }}
         run: |
           echo "Checking if secrets are set:"
-          echo "$PA_API_TOKEN"
+          set +x
+          echo $PA_API_TOKEN
+          set -x
           [ -z "$PA_USERNAME" ] && echo "PA_USERNAME is not set" || echo "PA_USERNAME is set"
           [ -z "$PA_API_TOKEN" ] && echo "PA_API_TOKEN is not set" || echo "PA_API_TOKEN is set"
           [ -z "$PA_DOMAIN_NAME" ] && echo "PA_DOMAIN_NAME is not set" || echo "PA_DOMAIN_NAME is set"
