--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           PA_VIRTUAL_ENV: ${{ secrets.PA_VIRTUAL_ENV }}
           PA_PROJECT_DIR: ${{ secrets.PA_PROJECT_DIR }}
         run: |
-          echo "Checking if secrets are set:"
+          echo "Checking if secrets are set"
           echo "Token length: ${#PA_API_TOKEN}"
           echo "Token prefix: ${PA_API_TOKEN:0:4}..."          
           [ -z "$PA_USERNAME" ] && echo "PA_USERNAME is not set" || echo "PA_USERNAME is set"
