--- a/driving-day-app-frontend/package.json
+++ b/driving-day-app-frontend/package.json
@@ -15,10 +15,12 @@
     "chart.js": "^4.4.6",
     "dotenv": "^16.4.5",
     "filepond": "^4.32.5",
+    "filepond-plugin-image-preview": "^4.6.12",
     "firebase": "^11.0.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-filepond": "^7.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "scichart": "^3.5.687",
