--- a/driving-day-app-frontend/package.json
+++ b/driving-day-app-frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "filepond": "^4.32.5",
     "filepond-plugin-file-validate-size": "^2.2.8",
@@ -21,6 +22,7 @@
     "firebase": "^11.0.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-filepond": "^7.1.2",
     "react-router-dom": "^6.27.0",
