--- a/driving-day-app-frontend/package.json
+++ b/driving-day-app-frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
@@ -21,6 +22,7 @@
     "filepond-plugin-image-preview": "^4.6.12",
     "firebase": "^11.0.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
