--- a/driving-day-app-frontend/.gitignore
+++ b/driving-day-app-frontend/.gitignore
@@ -13,10 +13,9 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.test
+.env.production
 .env
 
 npm-debug.log*
